tests/baselines/reference/parserClassDeclaration10.errors.txt
==== tests/cases/compiler/parserClassDeclaration10.ts (1 errors) ====
    class C {
       constructor();
       foo();
       ~~~
!!! parserClassDeclaration10.ts(3,4): error TS2240: Constructor implementation expected.
    }